--- a/tab-group-manager copy/popup.html
+++ b/tab-group-manager copy/popup.html
@@ -3,21 +3,165 @@
 <head>
   <meta charset="utf-8">
   <title>Tab Group Manager</title>
-  <link rel="stylesheet" href="style.css">
   <style>
     body {
-      width: 400px; /* Change the width */
-      height: 600px; /* Adjust the height as needed */
+      width: 400px;
+      min-height: 220px;
+      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+      color: #29313a;
+      background: #f7fafd;
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+    .popup-main {
+      padding: 18px 20px 16px 20px;
+    }
+    h1 {
+      margin: 0 0 14px 0;
+      font-size: 1.3em;
+      font-weight: 700;
+      color: #247ba0;
+      letter-spacing: 1px;
+      text-shadow: 0 1px 0 #fff;
+    }
+    .section {
+      margin-bottom: 16px;
+    }
+    .section-title {
+      font-size: 1.09em;
+      font-weight: 600;
+      margin-bottom: 8px;
+      color: #34495e;
+    }
+    ul {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+      border-radius: 7px;
+      background: #f8f9fa;
+      border: 1px solid #e2e7ef;
+      box-shadow: 0 1px 7px rgba(36,123,160,0.04);
+      font-size: 15px;
+    }
+    li {
+      display: flex;
+      align-items: center;
+      padding: 7px 0 7px 8px;
+      border-bottom: 1px solid #e2e7ef;
+      min-height: 35px;
+      transition: background 0.12s;
+    }
+    li:last-child {
+      border-bottom: none;
+    }
+    .item-name {
+      flex-grow: 1;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      font-weight: 500;
+      color: #247ba0;
+      font-size: 16px;
+      white-space: nowrap;
+    }
+    .buttons {
+      display: flex;
+      gap: 6px;
+      flex-shrink: 0;
+    }
+    button {
+      background: linear-gradient(90deg, #27ae60 80%, #40bad5 100%);
+      color: #fff;
+      border: none;
+      border-radius: 6px;
+      font-size: 14px;
+      font-weight: 500;
+      padding: 6px 13px;
+      cursor: pointer;
+      box-shadow: 0 2px 8px rgba(36,123,160,0.09);
+      transition: background 0.12s;
+      outline: none;
+    }
+    button:disabled {
+      background: #b9c2cc;
+      color: #ececec;
+      cursor: not-allowed;
+      box-shadow: none;
+    }
+    button:hover:not(:disabled) {
+      background: linear-gradient(90deg, #24b285 70%, #247ba0 100%);
+    }
+    /* Save group row */
+    #save-row {
+      display: flex;
+      align-items: center;
+      margin-top: 10px;
+      margin-bottom: 12px;
+      gap: 8px;
+    }
+    #group-name {
+      flex: 1;
+      font-size: 15px;
+      padding: 7px 10px;
+      border-radius: 7px;
+      border: 1.6px solid #d1d9e6;
+      margin-right: 0;
+      background: #f8fafc;
+      box-shadow: 0 2px 6px rgba(36,123,160,0.05);
+      transition: border 0.2s, box-shadow 0.2s;
+    }
+    #group-name:focus {
+      border-color: #247ba0;
+      outline: none;
+      background: #fff;
+      box-shadow: 0 0 0 2px #a2d8f4;
+    }
+    #save-group {
+      background-color: #2ecc71;
+      color: white;
+      border: none;
+      border-radius: 6px;
+      padding: 7px 16px;
+      font-size: 0.97em;
+      font-weight: 600;
+      transition: background 0.14s;
+    }
+    #save-group:hover {
+      background-color: #27ae60;
+    }
+    #open-manager-link {
+      display: block;
+      text-align: right;
+      font-size: 13px;
+      margin-top: 16px;
+      margin-bottom: 0;
+      color: #247ba0;
+      text-decoration: underline;
+      font-weight: 500;
+    }
+    #open-manager-link:hover {
+      color: #15516a;
+      text-decoration: underline;
     }
   </style>
 </head>
 <body>
-  <h1>Tab Groups</h1>
-  <input id="group-name" type="text" placeholder="Group name">
-  <button id="save-group">Save Current Tabs</button>
-  <ul id="group-list"></ul>
-
+  <div class="popup-main">
+    <h1>Tab Groups</h1>
+    <div id="save-row">
+      <input id="group-name" type="text" placeholder="New group name" autocomplete="off">
+      <button id="save-group">Save</button>
+    </div>
+    <div class="section">
+      <div class="section-title">Folders</div>
+      <ul id="folder-list"></ul>
+    </div>
+    <div class="section">
+      <div class="section-title">Groups</div>
+      <ul id="group-list"></ul>
+    </div>
+    <a href="options.html" target="_blank" id="open-manager-link">Open Tab Manager…</a>
+  </div>
   <script src="popup.js"></script>
-  <a href="options.html" target="_blank">Open Tab Manager</a>
 </body>
 </html>
