--- a/tab-group-manager/popup.html
+++ b/tab-group-manager/popup.html
@@ -3,21 +3,26 @@
 <head>
   <meta charset="utf-8">
   <title>Tab Group Manager</title>
-  <link rel="stylesheet" href="style.css">
-  <style>
-    body {
-      width: 400px; /* Change the width */
-      height: 600px; /* Adjust the height as needed */
-    }
-  </style>
+  <link rel="stylesheet" href="style/popup.css">
 </head>
 <body>
-  <h1>Tab Groups</h1>
-  <input id="group-name" type="text" placeholder="Group name">
-  <button id="save-group">Save Current Tabs</button>
-  <ul id="group-list"></ul>
+  <div class="popup-main">
+    <h1>Tab Groups</h1>
+    <div id="save-row">
+      <input id="group-name" type="text" placeholder="New group name" autocomplete="off">
+      <button id="save-group">Save</button>
+    </div>
+    <div class="section">
+      <div class="section-title">Folders</div>
+      <ul id="folder-list"></ul>
+    </div>
+    <div class="section">
+      <div class="section-title">Groups</div>
+      <ul id="group-list"></ul>
+    </div>
+    <a href="options.html" target="_blank" id="open-manager-link">Open Tab Manager…</a>
+  </div>
 
   <script src="popup.js"></script>
-  <a href="options.html" target="_blank">Open Tab Manager</a>
 </body>
 </html>
