--- a/tab-group-manager/options.html
+++ b/tab-group-manager/options.html
@@ -1,12 +1,15 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE html> <html>
 <head>
   <meta charset="utf-8" />
-  <title>Tab Group Manager</title>
+  <title>Tabby option</title>
   <link rel="stylesheet" href="style/options.css">
 </head>
 <body>
-  <h1>Tab Group Manager</h1>
+  <div id="header">
+    <h1>Tabby</h1>
+    <img src="icon.png" alt="Logo" />  
+  </div>
+  
   <div id="main">
 
     <div id="open-tabs">
@@ -32,6 +35,12 @@
       </div>
     </div>
 
+  </div>
+
+  <div id="footer">
+    <h3>Tabby - Double v3.1.2</h3>
+    <h3>A tab orginizing tool to keep ur browser orginized and ur ram happy</h3>
+    <h5>art made by Lyna</h5>
   </div>
 
   <script src="options.js"></script>
