Refactor Tabby extension to modular ES modules
Migrates Tabby from a single-file architecture to a modular ES module structure. Splits logic into background (storage, tabManager), UI (options, popup, ui-render), and utility files. Updates HTML to use type="module" scripts and removes legacy options.js. Improves maintainability and separation of concerns.

--- a/Tabby/options.html
+++ b/Tabby/options.html
@@ -43,6 +43,6 @@
     <h5>art made by Lyna</h5>
   </div>
 
-  <script src="options.js"></script>
+  <script type="module" src="src/ui/options.js"></script>
 </body>
 </html>
