--- a/Tabby/popup.html
+++ b/Tabby/popup.html
@@ -25,6 +25,6 @@
     <a href="options.html" target="_blank" id="open-manager-link">Open Tabby…</a>
   </div>
 
-  <script src="popup.js"></script>
+  <script type="module" src="src/ui/popup.js"></script>
 </body>
 </html>
